# hockey_app

./: .gitignore  README.md  endpoint.json  magic_tragic_math_flowchart.md  pwhl goalie stats api page.txt  pwhl skater stats api page.txt  pyproject.toml  requirements.txt  run.command
.github/workflows/: ci.yml  pages.yml
archive/notes/: flags_README.md  refresh_flowchart.md
archive/reference_docs/: 2024-25 NHL Data [w: MoneyPuck Predictions].xlsx  moneypuck_playoff_monte_carlo.py  moneypuck_pregame_model.py
docs/: app.js  data.js  data.json  index.html  styles.css
hockey_app/: __init__.py  __main__.py  app.py  config.py
hockey_app/assets/pwhl_logos/: README.md
hockey_app/data/: cache.py  espn_api.py  nhl_api.py  paths.py  pwhl_api.py  xml_cache.py
hockey_app/domain/: colors.py  teams.py
hockey_app/runtime/: __init__.py  app.py  logos.py  pipeline.py  prof.py  public_predictions.py  settings.py  storage.py  types.py
hockey_app/services/: simulations.py
hockey_app/tools/: cache_doctor.py  export_web.py
hockey_app/ui/: app_window.py  models_mount.py  notebook_scaffold.py  predictions_mount.py  stats_mount.py  style_notebook.py
hockey_app/ui/components/: flat_button.py  layout_metrics.py  logo_bank.py
hockey_app/ui/renderers/: heatmap_graph.py  pie_chart.py
hockey_app/ui/tabs/: __init__.py  game_stats.py  games.py  games_host.py  goal_differential.py  models_data.py  (+9 more)
tests/: test_games_cache.py  test_logo_bank.py  test_player_stats.py  test_playoff_bracket.py  test_predictions_mount.py  test_smoke.py  test_stats_phase_views.py  test_team_stats.py
